Fix padding issue : white space on the right

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -162,7 +162,7 @@ body {
 
   //& Other sections : about & work
   .container {
-    padding: 100px 0;
+    margin: 100px 0;
 
     .section {
       .section-title {
